--- a/source/GetSTEM.Model3DBrowser/GetSTEM.Model3DBrowser.csproj
+++ b/source/GetSTEM.Model3DBrowser/GetSTEM.Model3DBrowser.csproj
@@ -108,6 +108,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\ModelLoader.cs" />
+    <Compile Include="ViewModels\ModelResult.cs" />
     <Compile Include="Views\MathView.xaml.cs">
       <DependentUpon>MathView.xaml</DependentUpon>
     </Compile>
