removed 3DS files and AB3D dependency

--- a/source/GetSTEM.Model3DBrowser/GetSTEM.Model3DBrowser.csproj
+++ b/source/GetSTEM.Model3DBrowser/GetSTEM.Model3DBrowser.csproj
@@ -48,10 +48,6 @@
     <Reference Include="3DTools">
       <HintPath>..\dependencies\3DTools.dll</HintPath>
     </Reference>
-    <Reference Include="Ab3d.Reader3ds, Version=7.1.4127.41037, Culture=neutral, PublicKeyToken=d45c8e156fba2841, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\dependencies\Ab3d.Reader3ds.dll</HintPath>
-    </Reference>
     <Reference Include="Coding4Fun.Kinect.Wpf">
       <HintPath>..\packages\Coding4Fun.Kinect.Wpf.1.5.0\lib\Coding4Fun.Kinect.Wpf.dll</HintPath>
     </Reference>
@@ -112,6 +108,34 @@
     <Compile Include="Views\MathView.xaml.cs">
       <DependentUpon>MathView.xaml</DependentUpon>
     </Compile>
+    <Page Include="ModelResources\e.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModelResources\ecap.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModelResources\g.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModelResources\m.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModelResources\s.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModelResources\t.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ModelResources\tcap.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\BoundingBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -201,27 +225,6 @@
     <None Include="app.config" />
     <Resource Include="Images\mhta.png" />
     <Resource Include="Images\MHTA.jpg" />
-    <Content Include="ModelFiles\E-cap.3ds">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ModelFiles\e.3ds">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ModelFiles\g.3ds">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ModelFiles\M.3ds">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ModelFiles\S.3ds">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ModelFiles\T-cap.3ds">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="ModelFiles\t.3ds">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
